2019-11-05  Andreas Krebbel  <krebbel@linux.ibm.com>

	* gcc.dg/tree-ssa/gen-vect-26.c: Disable loop peeling check for
	IBM Z.
	* gcc.dg/tree-ssa/gen-vect-28.c: Likewise.

2019-11-05  Andreas Krebbel  <krebbel@linux.ibm.com>

	* gcc.dg/tree-ssa/gen-vect-11.c: Add --param min-vect-loop-bound=0
	for IBM Z.
	* gcc.dg/tree-ssa/gen-vect-11.c: Likewise.

2019-11-05  Andreas Krebbel  <krebbel@linux.ibm.com>

	* gcc.target/s390/s390.exp
	(check_effective_target_s390_useable_hw): Add inline asm for z14
	and z15. Replace instruction for z13 with lochiz. Add register
	clobbers. Check also for __zarch__ when doing the __VX__ test.

2019-11-05  Christophe Lyon  <christophe.lyon@linaro.org>

	* gcc.target/arm/attr-crypto.c: Skip if -mpure-code is used.
	* gcc.target/arm/attr-neon-fp16.c: Likewise.
	* gcc.target/arm/combine-cmp-shift.c: Likewise.
	* gcc.target/arm/data-rel-1.c: Likewise.
	* gcc.target/arm/data-rel-2.c: Likewise.
	* gcc.target/arm/data-rel-3.c: Likewise.
	* gcc.target/arm/ftest-armv7a-arm.c: Likewise.
	* gcc.target/arm/ftest-armv7a-thumb.c: Likewise.
	* gcc.target/arm/ftest-armv7r-arm.c: Likewise.
	* gcc.target/arm/ftest-armv7r-thumb.c: Likewise.
	* gcc.target/arm/ftest-armv7ve-arm.c: Likewise.
	* gcc.target/arm/ftest-armv7ve-thumb.c: Likewise.
	* gcc.target/arm/ftest-armv8a-arm.c: Likewise.
	* gcc.target/arm/ftest-armv8a-thumb.c: Likewise.
	* gcc.target/arm/lceil-vcvt_1.c: Likewise.
	* gcc.target/arm/lfloor-vcvt_1.c: Likewise.
	* gcc.target/arm/lround-vcvt_1.c: Likewise.
	* gcc.target/arm/memset-inline-10.c: Likewise.
	* gcc.target/arm/mod_2.c: Likewise.
	* gcc.target/arm/mod_256.c: Likewise.
	* gcc.target/arm/pr40657-1.c: Likewise.
	* gcc.target/arm/pr44788.c: Likewise.
	* gcc.target/arm/pr50305.c: Likewise.
	* gcc.target/arm/pr51835.c: Likewise.
	* gcc.target/arm/pr51915.c: Likewise.
	* gcc.target/arm/pr52006.c: Likewise.
	* gcc.target/arm/pr53187.c: Likewise.
	* gcc.target/arm/pr58784.c: Likewise.
	* gcc.target/arm/pr59575.c: Likewise.